# docs/swagger.yaml
@@ -52,48 +52,6 @@ info:
   title: Zeus 宙斯权限后台 API
   version: V0.1
 paths:
-  /account/EmailVerification:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{"result":[]}}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 验证邮件地址(验证)
-      tags:
-      - account
-  /account/ThirdUnbind:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{"result":[]}}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 解除绑定第三方应用
-      tags:
-      - account
-  /account/Thirdbind:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{"result":[]}}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 解除绑定第三方应用
-      tags:
-      - account
   /account/accountinfo:
     get:
       produces:
@@ -108,7 +66,146 @@ paths:
       summary: 获取个人中心用户信息
       tags:
       - account
-  /account/bindcode:
+  /account/thirdbind:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"result":[]}}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 解除绑定第三方应用
+      tags:
+      - account
+  /healthcheck:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{""}}'
+          schema:
+            type: string
+      summary: 健康检查
+      tags:
+      - Health
+  /log/operation:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"id":1,"name":"test"}}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 操作日志信息
+      tags:
+      - Log
+  /menus/:
+    put:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"id":1}}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 编辑菜单
+      tags:
+      - menu
+  /roles:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"id":1}}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 新增角色
+      tags:
+      - Role
+  /users:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"id":1}}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 新增用户
+      tags:
+      - Users
+  /users/login:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: 登录名
+        in: formData
+        name: username
+        required: true
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        required: true
+        type: string
+      - description: 验证码ID
+        in: formData
+        name: captchaid
+        type: string
+      - description: 验证码
+        in: formData
+        name: captchaval
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"id":1,"name":"wutong"}}'
+          schema:
+            type: string
+        "400":
+          description: '{"code":10004,"msg": "用户信息不存在"}'
+          schema:
+            type: string
+      summary: 用户登录
+      tags:
+      - Users
+  /users/login/refresh:
+    post:
+      consumes:
+      - multipart/form-data
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":0,"data":{"id":1,"name":"wutong"}}'
+          schema:
+            type: string
+        "400":
+          description: '{"code":10004,"msg": "用户信息不存在"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 刷新token
+      tags:
+      - Users
+  /v1/account/bindcode:
     get:
       produces:
       - application/json
@@ -122,7 +219,7 @@ paths:
       summary: 绑定2fa goole 验证码
       tags:
       - account
-  /account/domains:
+  /v1/account/domains:
     get:
       produces:
       - application/json
@@ -136,7 +233,21 @@ paths:
       summary: 获取用户管理域
       tags:
       - account
-  /account/info:
+  /v1/account/emailverification:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"result":[]}}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 验证邮件地址(验证)
+      tags:
+      - account
+  /v1/account/info:
     get:
       consumes:
       - application/json
@@ -161,7 +272,7 @@ paths:
       summary: 登录用户信息
       tags:
       - account
-  /account/password:
+  /v1/account/password:
     put:
       produces:
       - application/json
@@ -175,7 +286,7 @@ paths:
       summary: 更新个人密码
       tags:
       - account
-  /account/third:
+  /v1/account/third:
     get:
       produces:
       - application/json
@@ -189,7 +300,21 @@ paths:
       summary: 验证邮件地址(发送邮件)
       tags:
       - account
-  /datas:
+  /v1/account/thirdunbind:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"result":[]}}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 解除绑定第三方应用
+      tags:
+      - account
+  /v1/datas:
     get:
       parameters:
       - description: 条数
@@ -225,7 +350,7 @@ paths:
       summary: 新增数据权限
       tags:
       - DataPerm
-  /datas/{id}:
+  /v1/datas/{id}:
     delete:
       parameters:
       - description: 要删除的id
@@ -283,7 +408,7 @@ paths:
       summary: 编辑数据权限
       tags:
       - DataPerm
-  /depts:
+  /v1/depts:
     get:
       parameters:
       - description: 条数
@@ -319,7 +444,7 @@ paths:
       summary: 新增部门
       tags:
       - Department
-  /depts/{id}:
+  /v1/depts/{id}:
     delete:
       parameters:
       - description: 部门id
@@ -377,7 +502,7 @@ paths:
       summary: 编辑部门
       tags:
       - Department
-  /domains:
+  /v1/domains:
     get:
       parameters:
       - description: 条数
@@ -413,7 +538,7 @@ paths:
       summary: 新增项目
       tags:
       - Domain
-  /domains/{id}:
+  /v1/domains/{id}:
     delete:
       parameters:
       - description: 项目id
@@ -471,19 +596,7 @@ paths:
       summary: 编辑项目
       tags:
       - Domain
-  /healthcheck:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{""}}'
-          schema:
-            type: string
-      summary: 健康检查
-      tags:
-      - Health
-  /log/login:
+  /v1/log/login:
     get:
       produces:
       - application/json
@@ -497,7 +610,7 @@ paths:
       summary: 登录日志列表
       tags:
       - Log
-  /log/login/{logId}:
+  /v1/log/login/{logId}:
     get:
       produces:
       - application/json
@@ -511,21 +624,7 @@ paths:
       summary: 登录日志信息
       tags:
       - Log
-  /log/operation:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{"id":1,"name":"test"}}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 操作日志信息
-      tags:
-      - Log
-  /log/operation/{logId}:
+  /v1/log/operation/{logId}:
     get:
       produces:
       - application/json
@@ -539,7 +638,7 @@ paths:
       summary: 操作日志列表
       tags:
       - Log
-  /menus:
+  /v1/menus:
     get:
       produces:
       - application/json
@@ -566,7 +665,7 @@ paths:
       summary: 新增菜单
       tags:
       - menu
-  /menus/:
+  /v1/menus/:
     delete:
       produces:
       - application/json
@@ -601,20 +700,7 @@ paths:
       summary: 菜单信息
       tags:
       - menu
-    put:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{"id":1}}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 编辑菜单
-      tags:
-      - menu
-  /roles:
+  /v1/roles:
     get:
       parameters:
       - description: 条数
@@ -637,20 +723,7 @@ paths:
       summary: 角色列表[分页+搜索]
       tags:
       - Role
-    post:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{"id":1}}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 新增角色
-      tags:
-      - Role
-  /roles/:
+  /v1/roles/:
     delete:
       produces:
       - application/json
@@ -677,7 +750,7 @@ paths:
       summary: 更新角色信息
       tags:
       - Role
-  /roles/{id}:
+  /v1/roles/{id}:
     get:
       parameters:
       - description: 角色id
@@ -697,21 +770,30 @@ paths:
       summary: 角色信息
       tags:
       - Role
-  /users:
+  /v1/users:
     get:
+      parameters:
+      - description: 条数
+        in: query
+        name: limit
+        type: integer
+      - description: 偏移量
+        in: query
+        name: skip
+        type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{"id":1}}'
+          description: '{"code":200,"data":{"result":[...],"total":1}}'
           schema:
             type: string
       security:
       - ApiKeyAuth: []
-      summary: 新增用户
+      summary: 用户列表[分页+搜索]
       tags:
       - Users
-  /users/{id}:
+  /v1/users/{id}:
     delete:
       parameters:
       - description: 用户id
@@ -777,7 +859,7 @@ paths:
       summary: 编辑用户
       tags:
       - Users
-  /users/{id}/password:
+  /v1/users/{id}/password:
     put:
       parameters:
       - description: 用户id
@@ -797,7 +879,7 @@ paths:
       summary: 更新用户密码
       tags:
       - Users
-  /users/{id}/permissions:
+  /v1/users/{id}/permissions:
     get:
       parameters:
       - description: 用户id
@@ -817,7 +899,7 @@ paths:
       summary: 获取用户权限列表
       tags:
       - Users
-  /users/{id}/status:
+  /v1/users/{id}/status:
     put:
       parameters:
       - description: 用户id
@@ -837,7 +919,7 @@ paths:
       summary: 更新用户状态
       tags:
       - Users
-  /users/department/move:
+  /v1/users/department/move:
     post:
       produces:
       - application/json
@@ -849,63 +931,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 移动部门
-      tags:
-      - Users
-  /users/login:
-    post:
-      consumes:
-      - multipart/form-data
-      parameters:
-      - description: 登录名
-        in: formData
-        name: username
-        required: true
-        type: string
-      - description: 密码
-        in: formData
-        name: password
-        required: true
-        type: string
-      - description: 验证码ID
-        in: formData
-        name: captchaid
-        type: string
-      - description: 验证码
-        in: formData
-        name: captchaval
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{"id":1,"name":"wutong"}}'
-          schema:
-            type: string
-        "400":
-          description: '{"code":10004,"msg": "用户信息不存在"}'
-          schema:
-            type: string
-      summary: 用户登录
-      tags:
-      - Users
-  /users/login/refresh:
-    post:
-      consumes:
-      - multipart/form-data
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":0,"data":{"id":1,"name":"wutong"}}'
-          schema:
-            type: string
-        "400":
-          description: '{"code":10004,"msg": "用户信息不存在"}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 刷新token
       tags:
       - Users
 securityDefinitions:
